Fix gap underneath banner image  🐿 v2.11.0

--- a/src/components/top/anon-subscribe-now/main.scss
+++ b/src/components/top/anon-subscribe-now/main.scss
@@ -29,6 +29,7 @@
 	}
 
 	.n-alert-banner__image {
+		line-height: 0;
 		padding: 0;
 	}
 
